# ComponentInventory

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
ComponentInventory/: CMakeLists.txt
ComponentInventory/src/: main.cpp
InventoryBackend/: CMakeLists.txt
InventoryBackend/include/: BJTManager.h  CapacitorDielectricManager.h  CapacitorManager.h  CapacitorPackageManager.h  Category.h  CategoryManager.h  Component.h  ComponentManager.h  ConsoleUtils.h  Database.h  DbResult.h  DbUtils.h  DiodeManager.h  DiodePackageManager.h  DiodePolarityManager.h  DiodeTypeManager.h  ElectrolyticManager.h  FuseManager.h  FusePackageManager.h  FuseTypeManager.h  InventoryService.h  LookupItem.h  LookupManager.h  Manufacturer.h  ManufacturerManager.h  Resistor.h  ResistorComposition.h  ResistorCompositionManager.h  ResistorManager.h  ResistorPackage.h  ResistorPackageManager.h  SchemaManager.h  TransistorManager.h  TransistorPackageManager.h  TransistorPolarityManager.h  TransistorTypeManager.h
InventoryBackend/src/: BJTManager.cpp  CapacitorDielectricManager.cpp  CapacitorManager.cpp  CapacitorPackageManager.cpp  CategoryManager.cpp  ComponentManager.cpp  Database.cpp  DiodeManager.cpp  DiodePackageManager.cpp  DiodePolarityManager.cpp  DiodeTypeManager.cpp  ElectrolyticManager.cpp  FuseManager.cpp  FusePackageManager.cpp  FuseTypeManager.cpp  InventoryService.cpp  LookupManager.cpp  ManufacturerManager.cpp  ResistorCompositionManager.cpp  ResistorManager.cpp  ResistorPackageManager.cpp  SchemaManager.cpp  TransistorManager.cpp  TransistorPackageManager.cpp  TransistorPolarityManager.cpp  TransistorTypeManager.cpp
qtui/: CMakeLists.txt
qtui/include/: AddLookupDialog.h  BaseDialog.h  ComponentEditDialog.h  ComponentTableModel.h  DevDataSeeder.h  ShrinkingStackedWidget.h  mainwindow.h
qtui/include/editors/: CapacitorEditor.h  IComponentEditor.h  ResistorEditor.h
qtui/src/: AddLookupDialog.cpp  ComponentEditDialog.cpp  ComponentEditDialog.ui  ComponentTableModel.cpp  DevDataSeeder.cpp  main.cpp  mainwindow.cpp  mainwindow.ui
qtui/src/editors/: CapacitorEditor.cpp  ResistorEditor.cpp
qtui/ui/: CapacitorEditor.ui  ResistorEditor.ui
tests/: CMakeLists.txt
tests/src/: BJTManagerTests.cpp  BackendTestFixture.h  BackendTests.cpp  CapacitorDielectricManagerTests.cpp  CapacitorManagerTests.cpp  CapacitorPackageManagerTests.cpp  CategoryManagerTest.cpp  CategoryManagerTests.cpp  ComponentManagerTest.cpp  ComponentManagerTests.cpp  DatabaseTests.cpp  DiodeManagerTest.cpp  DiodeManagerTests.cpp  DiodePackageManagerTests.cpp  DiodePolarityManagerTests.cpp  ElectrolyticManagerTests.cpp  FuseManagerTests.cpp  FusePackageManagerTests.cpp  FuseTypeManagerTests.cpp  ManufacturerManagerTests.cpp  ResistorCompositionManagerTests.cpp  ResistorManagerTests.cpp  ResistorPackageManagerTests.cpp  SchemaManagerTests.cpp  TransistorManagerTests.cpp  TransistorPackageManagerTests.cpp  TransistorPolarityManagerTests.cpp  TransistorTypeManagerTests.cpp
